# almostworking-StockX-Scraper-gets-name-captcha-stuck-Dec2024

./: .replit  Pasted--import-requests-import-json-class-StockXScraper-def-init-self-self-headers--1734575071614.txt  pyproject.toml  stockx_scraper.py  test_stockx.py  test_stockx_selenium.py
